# space_based_telescope_image_generator

./: .buildinfo  .gitignore  .pdm-python  README.md  __temp__.pov.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  space_based_telescope_image_generator.html  space_based_telescope_image_generator.remove_me.html  space_based_telescope_image_generator.scenario_basic.html  space_based_telescope_image_generator.scene_manager_exemple.html
.github/workflows/: generate-docs.yml
_sources/: index.rst.txt  space_based_telescope_image_generator.rst.txt  space_based_telescope_image_generator.scenario_basic.rst.txt  space_based_telescope_image_generator.scene_manager_exemple.rst.txt
docs/: conf.py  modules.rst  space_based_telescope_image_generator.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  space_based_telescope_image_generator.doctree  space_based_telescope_image_generator.remove_me.doctree
docs/_build/html/: .buildinfo  genindex.html  modules.html  objects.inv  py-modindex.html  searchindex.js  space_based_telescope_image_generator.html  space_based_telescope_image_generator.remove_me.html
docs/_build/html/_sources/: index.rst.txt  (+1 more)
src/space_based_telescope_image_generator/: configuration_template.yaml  remove_me.py  scenario_basic.py  scene_manager_exemple.py  scene_manager_video_rendering_exemple.py
src/space_based_telescope_image_generator/objects/: basic_earth.py  earth.py  primitive_cubesat.py  starmap.py  sun.py  target_object.py  tracking_satellite.py
(+14 files in other folders)
