[project]
requires-python = ">=3.11" 
name = "space_based_telescope_image_generator"
description = "Python project using POV Ray engine to generate space based images."
authors = [
    { name = 'Arnaud Somville', email = 'arnaud.somville@estaca.eu' },
    {name = "Arnaud SOMVILLE", email = "arnaud.somville@estaca.eu"},
]
version = "0.1.0"
dependencies = [
    "pydantic>=2.6.4",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "vapory@git+https://github.com/arnaudsomville/vapory.git@master",
    "confz>=2.0.1",
    "gdown>=5.2.0",
    "numpy>=2.2.1",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.20.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pdm.lock]
targets = [
    { os = "any", python = ">=3.11", platform = "any" }
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.scripts]
verify_home_folder = "python src/space_based_telescope_image_generator/utils/home_folder_management.py"
post_install = { shell = "pdm run verify_home_folder" }